--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <title>ZeLibrary</title>
   <base href="/">
-
+<a class="navbar-brand" href="index.html">
+    <img style="**margin-top: -55px; width: 150px; height:auto;**" alt="Logo" src="http://localhost:8080/GestionBiblio/book/image/?imagePath=Logo.png" class="pull-left">
+<br>
+</a>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet"
