--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>ZeLibrary</title>
   <base href="/">
 <a class="navbar-brand" href="index.html">
-    <img style="**margin-top: -55px; width: 150px; height:auto;**" alt="Logo" src="http://localhost:8080/GestionBiblio/book/image/?imagePath=Logo.png" class="pull-left">
+    <img style="**margin-top: -55px; " alt="Logo" src="http://172.16.2.30:8080/GestionBiblio/book/image/?imagePath=Logo_BiblioTech.png" class="pull-left">
 <br>
 </a>
   <meta name="viewport" content="width=device-width, initial-scale=1">
